--- a/UI.css
+++ b/UI.css
@@ -1,24 +1,33 @@
-table,td{
+table, td{
     border: 1px solid black;
     border-collapse: collapse;
-}
-.nums{
-    width: 150px;
-    height: 150px;
-    font-size: 40px;
-    font-weight: bold;
-}
-.options{
-    height: 50px;
-}
-.reset{
-    height: 100%;
-    width: 100%;
-    font-size: 20px;
-    font-weight: bold;
+    text-align: center;
 }
 
-table{
-    margin-left: auto;
+button{
+    width: 100%;
+    height: 100%;
+}
+
+.levelSelect{
+    height: 150px;
+    width: 500px;
     margin-right: auto;
+    margin-left: auto;
+}
+
+.levelTable{
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.gap{
+    color: #FFFFFF;
+    text-align:center;
+}
+
+.gridButton{
+    font-size: 30px;
+    height: 150px;
+    width: 150px;
 }
